# Opencodebot

./: .dockerignore  .env.example  .gitignore  1  AGENTS.md  Dockerfile  README.md  TELEGRAM_CONTROLLER_TEST_PLAN.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_bot.sh  telegram_controller.py  test_tdd_compliance.py  test_telegram_controller.py  test_telegram_controller_tdd.py
.ipynb_checkpoints/: AGENTS-checkpoint.md  TEST_PLAN-checkpoint.md  requirements-checkpoint.txt  telegram_controller-checkpoint.py  test_structure-checkpoint.py
alembic/: env.py
alembic/versions/: 001_initial.py
app/: __init__.py  celery.py  config.py  database.py  main.py  models.py  tasks.py
app/api/: routes.py  schemas.py
app/collectors/: __init__.py  alphavantage.py  finnhub.py  gnews.py
scripts/: seed_companies.py
src/: .telegram_controller.py.swp  __init__.py  telegram_controller.py  telegram_controller.py.bak
src/.ipynb_checkpoints/: telegram_controller-checkpoint.py
src/opencode_bot/: telegram_controller.py
test/: test_runner.py  test_telegram_controller.py  test_telegram_controller.py.bak
tests/: __init__.py  conftest.py  test_git_pull.sh  test_restart_command.py
tests/integration/: test_api.py
tests/unit/: test_escape_functions.py  test_models.py
